# hpcfi-llvm-project

clang/lib/CodeGen/: CGExpr.cpp
llvm/lib/Linker/: IRMover.cpp
llvm/lib/Transforms/: CMakeLists.txt
llvm/lib/Transforms/HPCFI/: CMakeLists.txt  CmpCFIBase.cpp  CmpCFIBase.h  HPCFIBase.cpp  HPCFIBase.h  JmpCFIBase.cpp  JmpCFIBase.h
llvm/lib/Transforms/HPCFI/CmpCFIPass/: CMakeLists.txt  CmpCFIPass.cpp
llvm/lib/Transforms/HPCFI/JmpCFIPass/: CMakeLists.txt  JmpCFIPass.cpp
llvm/lib/Transforms/HPCFI/MLTAPass/: CMakeLists.txt  MLTA.cpp  MLTA.h  MLTAPass.cpp
mlir/utils/vscode/: package-lock.json
